iRedMail-0.8.0-beta3:
    * Enable greylist opt-in in Policyd-1.x by default.
    * It now works on Ubuntu Linux 12.04 (precise). Tested on Alpha 2.
    * It now works on Linux Mint 12 (code name: lisa).
    * Add share folder support within Dovecot 2.
    * Fixed:
        + Two Dovecot config files are world readable: used_quota.conf,
          share-folder.conf.
          Thanks Martin Kuchar for the report.

iRedMail-0.8.0-beta2:
    * It now works perfectly on Gentoo.
    * Fixed:
        + Dovecot cannot store realtime quota usage in PostgreSQL.
        + User authentication in Roundcube is case sensitive (login_lc).

iRedMail-0.8.0-beta1:
    * It now supports PostgreSQL as backend on Ubuntu 11.10/12.04.
    * Package update:
        + Roundcube webmail -> 0.7.1

iRedMail-0.7.4:
    * Enable two sample dovecot sieve filters in Roundcube webmail:
      Move spam to Junk, Vacation. Both are disabled by default.
    * Store realtime mailbox quota in separate SQL table in MySQL backend.
    * It now works on Ubuntu 11.10, openSUSE 12.1.
    * SPF verification is now enabled by default.
    * Add Policyd-2.0.x (code name "cluebringer") support on Ubuntu 11.10.
    * Fixed:
      + Apache daemon user doesn't have permission to read Apache log files in
        Awstats's cron job.
      + Incorrect per-user realtime mailbox quota if loggin in with shadowAddress.
        OpenLDAP backend only. Thanks tmihalicek <tomislav.mihalicek @gmail>.
      + Incorrect per-user sieve_dir setting in Dovecot.
        Thanks cetex <oskar @cetex.se>.
      + Add missing INDEXes for Amavisd database: msgs.mail_id, (msgs.content,
        msgs.time_num), quarantine.mail_id.
        Thanks rjnena <rjnena@gmail>, David <dcharbonnier@gmail>.
    * Package update:
        + phpLDAPadmin -> 1.2.2
        + Roundcube webmail -> 0.7.0
        + phpMyAdmin -> 3.4.8

iRedMail-0.7.3:
    * Add enabledService=lda for newly created LDAP mail user. Required by
      Dovecot 2.x.