@@ -1,4 +1,9 @@
 iRedMail-0.8.0-beta3:
+    * Drop support for below distributions and releases:
+        + Debian 5 (Lenny)
+        + Ubuntu 8.x, 9.x, 10.10, 11.04
+        + openSUSE: 11.x
+        + FreeBSD: 7.x
     * Enable greylist opt-in in Policyd-1.x by default.
     * It now works on Ubuntu Linux 12.04 (precise). Tested on Alpha 2.
     * It now works on Linux Mint 12 (code name: lisa).
